# feature_store

./: .gitattributes  .gitignore  .isort.cfg  Jenkinsfile  Makefile  README.md  config.yaml  create_git_tag.sh  docker-compose.yml  main.py  main_manual.py  mypy.ini  pyproject.toml  requirements.txt  run_check.sh
configs/: conf.py  feathr_config.yaml  feature_registry_config.yaml  infer_pipeline_config.yaml  materialize_pipeline_config.yaml  training_pipeline_config.yaml
featurestore/: constants.py  daily_data_utils.py  feature_pipeline.py  feature_preprocessing.py  hashing_function.py
featurestore/base/: feature_preprocessing.py
featurestore/base/schemas/: pipeline_config.py  registry_config.py
featurestore/base/utils/: config.py  fileops.py  gpu.py  logger.py  resource.py  spark.py  utils.py
featurestore/pipeline/: infer_pipeline.py  materialize_pipeline.py  training_pipeline.py
featurestore/preprocess/: ab_feature_preprocessing.py  feature_preprocessing.py  interaction_feature_preprocessing.py  item_feature_preprocessing.py  online_feature_preprocessing.py  user_feature_preprocessing.py
featurestore/registry/: feature_registry.py
featurestore/transform/: feature_transform.py  key_definition.py  source_definition.py
tests/: test_feature_pipeline.py
tests/configs/: feathr_config.yaml  feature_registry_config.yaml  materialize_pipeline_config.yaml  training_pipeline_config.yaml
tests/data/: rehash_item_id.npy  rehash_user_id.npy
tests/data/processed/ab_testing_user_info.parquet/: 9a56df3bd9f942498b29fc8b70bf7a50-0.parquet
tests/data/processed/content_type.parquet/: 31e6f0380a424ecca6b3ea8519ce6446-0.parquet
tests/data/processed/profile_mytv_info.parquet/: 88fc45be4a054b3b8c97149dd3016f97-0.parquet
tests/data/processed/user_mytv_info.parquet/: 0755e54519d94d359a0c57532ca26644-0.parquet
(+432 files in other folders)
