[build-system]
requires = ["setuptools>=42", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {"include"= ["featurestore"]}

[project]
name = "featurestore"
version = "v1.0"
description = "IC recommendation feature store"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "VNPT@DS"}
]
requires-python = ">=3.9,<4.0"

dependencies = [
"typer==0.12.5",
"unidecode==1.3.8",
"GPUtil==1.4.0",
"psutil==6.1.0",
"scipy==1.13.1",
"flask-session==0.5.0",
"pylint==3.3.4",
"pydantic==2.10.6",
"feathr @ git+https://github.com/giangnmt98/feathr_deploy.git#subdirectory=feathr_project"]

[project.optional-dependencies]
dev = [
    # Add the list from requirements.txt here
    "black==23.3.0",
    "flake8==6.0.0",
    "mypy==1.8.0",
    "isort==5.12.0",
    "types-PyYAML==6.0.12.10",
    "pre-commit==3.3.2",
    "pytest==7.3.2"
]
